<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_round_search"
        android:title="Cari"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_round_star"
        android:title="Favorit"/>
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_outline_settings"
        android:title="Pengaturan"/>

</menu>