<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:layout_gravity="top"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@color/white"
                app:title="Detail User"
                app:navigationIcon="@drawable/ic_round_arrow_back_24"
                app:navigationIconTint="@color/white"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?attr/colorPrimary"
                android:gravity="center"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/avatar"
                        android:layout_width="94dp"
                        android:layout_height="94dp"
                        app:shapeAppearanceOverlay="@style/circleImageView"
                        app:strokeWidth="1dp"
                        app:strokeColor="@color/white"
                        android:adjustViewBounds="true"
                        android:src="@drawable/github_logo"
                        android:layout_marginEnd="16dp"/>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_round_star"
                        app:backgroundTint="@color/white"
                        app:fabSize="mini"
                        android:layout_gravity="end|bottom"/>
                </FrameLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorColor="@color/primary_500"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:fillViewport="true">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/detail_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_gravity="center"
        android:visibility="visible"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_error"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="Eror"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Coba Lagi"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>