...
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:visibility="gone"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_gravity="center"
            android:visibility="visible"/>

...
