<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_gravity="top"
        app:title="Pengaturan"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_round_arrow_back_24"
        app:navigationIconTint="@color/white"
        app:layout_scrollFlags="scroll|enterAlwaysCollapsed"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Mode Gelap"
        android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>